RESOLVED FIXED69054
JSVALUE32_64 DFG JIT failed to be built on 32-bit Linux due to incorrect overloaded OpInfo constructor
https://bugs.webkit.org/show_bug.cgi?id=69054
Summary JSVALUE32_64 DFG JIT failed to be built on 32-bit Linux due to incorrect over...
Yuqiang Xian
Reported 2011-09-28 18:16:45 PDT
size_t is equal to uint32_t on most 32-bit platforms, except for Mac OS.
Attachments
proposed patch (1.36 KB, patch)
2011-09-28 18:20 PDT, Yuqiang Xian
no flags
Yuqiang Xian
Comment 1 2011-09-28 18:20:00 PDT
Created attachment 109110 [details] proposed patch
Gavin Barraclough
Comment 2 2011-09-28 23:46:42 PDT
Comment on attachment 109110 [details] proposed patch Maybe we should just do away with this constructor - could be worth examining it's uses, I think in many cases the arguments might make more sense as size_t's (e.g. subscripts to arrays in CodeBlock). But seems sensible for now.
WebKit Review Bot
Comment 3 2011-09-29 00:51:55 PDT
Comment on attachment 109110 [details] proposed patch Clearing flags on attachment: 109110 Committed r96309: <http://trac.webkit.org/changeset/96309>
WebKit Review Bot
Comment 4 2011-09-29 00:51:59 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.