JSVALUE32_64 DFG JIT failed to be built on 32-bit Linux due to incorrect overloaded OpInfo constructor https://bugs.webkit.org/show_bug.cgi?id=69054

Patch by Yuqiang Xian <yuqiang.xian@intel.com> on 2011-09-29
Reviewed by Gavin Barraclough.

size_t is equal to uint32_t on most 32-bit platforms, except for Mac OS.

* dfg/DFGNode.h:

Canonical link: https://commits.webkit.org/85076@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@96309 268f45cc-cd09-0410-ab3c-d52691b4dbfc